--- a/examples/guides/add-legends/step-7.html
+++ b/examples/guides/add-legends/step-7.html
@@ -15,10 +15,11 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>San Francisco Streets</h1>
+        <h1>Percent Master's Degree</h1>
       </header>
       <section>
         <div id="controls">
+          <p id="content-title"></p>
           <ul id="content"></ul>
         </div>
       </section>
@@ -46,30 +47,43 @@
       apiKey: 'default_public'
     });
 
-    const source = new carto.source.Dataset('sf_stclines');
+    const source = new carto.source.Dataset('demographics_sf');
     const viz = new carto.Viz(`
-      color: ramp(top($st_type, 5), bold)
-      width: 2
+      color: ramp(globalquantiles($masters_percent,5),purp)
+      strokeWidth: 1
     `);
     const layer = new carto.Layer('layer', source, viz);
-
+    
     layer.addTo(map, 'watername_ocean');
+
     layer.on('loaded', () => {
       hideLoader();
 
       const colorLegend = layer.viz.color.getLegendData({
-        othersLabel: 'Default'
+        othersLabel: 'Default',
+        samples: 20
       });
 
       let colorLegendList = '';
+
       colorLegend.data.forEach((legend) => {
         const colorHex = rgbToHex(legend.value);
-        colorLegendList +=
-          `<li><span class="${viz.geometryType}-mark" style="border-color:${colorHex};"></span> <span>${legend.key}</span></li>\n`;
+        const keyMin = legend.key[0].toFixed(2);
+        const keyMax = legend.key[1].toFixed(2);
+        let bucket = `${keyMin} - ${keyMax}`;
+        if (keyMin==='-Infinity'){
+          bucket = `<${keyMax}`;
+        }else if (keyMax==='Infinity'){
+          bucket = `>${keyMin}`;
+        }
+
+      colorLegendList +=
+          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${bucket}</span></li>\n`;
       });
 
       document.getElementById('content').innerHTML = colorLegendList;
-    });
+
+   });
 
     function hideLoader() {
       document.getElementById('loader').style.opacity = '0';
@@ -78,6 +92,7 @@
     function rgbToHex(color) {
       return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
     }
+
   </script>
 </body>
 
