--- a/examples/guides/add-legends/step-8.html
+++ b/examples/guides/add-legends/step-8.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+  <title>Line legend | CARTO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
-
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
-
-  <link rel="stylesheet" type="text/css" href="../../style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
@@ -41,6 +42,11 @@
       zoom: 12
     });
 
+    const nav = new mapboxgl.NavigationControl({
+      showCompass: false
+    });
+    map.addControl(nav, 'top-left');
+
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
@@ -64,8 +70,10 @@
       let colorLegendList = '';
       colorLegend.data.forEach((legend) => {
         const colorHex = rgbToHex(legend.value);
+        const type = legend.key;
+        const entry = type !== 'CARTO_VL_OTHERS' ? type : 'Others';
         colorLegendList +=
-          `<li><span class="${viz.geometryType}-mark" style="border-color:${colorHex};"></span> <span>${legend.key}</span></li>\n`;
+          `<li><span class="${viz.geometryType}-mark" style="border-color:${colorHex};"></span> <span>${entry}</span></li>\n`;
       });
 
       document.getElementById('content').innerHTML = colorLegendList;
