switch location of some examples

--- a/examples/widgets/numeric-chart.html
+++ b/examples/widgets/numeric-chart.html
@@ -62,7 +62,7 @@
     // Define the visualization
     const viz = new carto.Viz(`
       @histogram: viewportHistogram($hour, 12)
-      color: ramp($hour, sunset)
+      color: #86d7ff
       width: 5
       strokeWidth: 0
     `);
