--- a/examples/widgets/category-widget-viewport.html
+++ b/examples/widgets/category-widget-viewport.html
@@ -9,9 +9,11 @@
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
+
     <!-- Include Airship -->
-    <link rel="stylesheet" href="https://libs.cartocdn.com/airship-style/v1.0.0-beta.0/airship.css">
-    <script src="https://libs.cartocdn.com/airship-components/v1.0.0-beta.0/airship.js"></script>
+    <link rel="stylesheet" href="https://libs.cartocdn.com/airship-style/v1.0.3/airship.css">
+    <link rel="stylesheet" href="https://libs.cartocdn.com/airship-icons/v1.0.3/icons.css">
+    <script src="https://libs.cartocdn.com/airship-components/v1.0.3/airship.js"></script>
 </head>
 
 <body>
@@ -50,7 +52,7 @@
         const source = new carto.source.Dataset("railroad_accidents");
         const viz = new carto.Viz(`
             @histogram: viewportHistogram($accident_type)
-`);
+        `);
         const layer = new carto.Layer('layer', source, viz);
 
         layer.addTo(map, 'watername_ocean');
