--- a/examples/widgets/category-widget-viewport.html
+++ b/examples/widgets/category-widget-viewport.html
@@ -44,6 +44,11 @@
             zoom: 3.5,
         });
 
+        const nav = new mapboxgl.NavigationControl({
+            showCompass: false
+        });
+        map.addControl(nav, 'top-left');
+
         carto.setDefaultAuth({
             username: 'cartovl',
             apiKey: 'default_public'
