--- a/examples/widgets/histogram-widget-viewport.html
+++ b/examples/widgets/histogram-widget-viewport.html
@@ -9,7 +9,7 @@
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
-    
+
     <!-- Include Airship -->
     <link rel="stylesheet" href="https://libs.cartocdn.com/airship-style/v1.0.3/airship.css">
     <link rel="stylesheet" href="https://libs.cartocdn.com/airship-icons/v1.0.3/icons.css">
@@ -43,6 +43,11 @@
             center: [-96, 41],
             zoom: 3.5,
         });
+
+        const nav = new mapboxgl.NavigationControl({
+            showCompass: false
+        });
+        map.addControl(nav, 'top-left');
 
         carto.setDefaultAuth({
             username: 'cartovl',
