--- a/examples/widgets/numeric-chart.html
+++ b/examples/widgets/numeric-chart.html
@@ -41,19 +41,19 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [2.187695966305114, 41.38802296362937],
-      zoom: 12.073961457702497
-    });
-
-    carto.setDefaultAuth({
-      username: 'cartovl',
-      apiKey: 'default_public'
+      center: [2.2, 41.4],
+      zoom: 12
     });
 
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
     });
     map.addControl(nav, 'top-left');
+
+    carto.setDefaultAuth({
+      username: 'cartovl',
+      apiKey: 'default_public'
+    });
 
     const ctx = document.getElementById('histogram').getContext('2d');
 
