--- a/examples/widgets/viewport-summary.html
+++ b/examples/widgets/viewport-summary.html
@@ -49,6 +49,11 @@
             zoom: 3.5,
         });
 
+        const nav = new mapboxgl.NavigationControl({
+            showCompass: false
+        });
+        map.addControl(nav, 'top-left');
+
         carto.setDefaultAuth({
             username: 'cartovl',
             apiKey: 'default_public'
