--- a/examples/legends/feature-and-legend-opacity.html
+++ b/examples/legends/feature-and-legend-opacity.html
@@ -4,12 +4,9 @@
     <title>Transparent Legend | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-
     <script src="../../../dist/carto-vl.js"></script>
-
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
-
     <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
@@ -36,6 +33,11 @@
             center: [-96, 41],
             zoom: 3
         });
+
+        const nav = new mapboxgl.NavigationControl({
+            showCompass: false
+        });
+        map.addControl(nav, 'top-left');
 
         carto.setDefaultAuth({
             username: 'cartovl',
