--- a/examples/widgets/viewport-summary.html
+++ b/examples/widgets/viewport-summary.html
@@ -16,9 +16,9 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Widgets</h1>
+                <h1>Railroad accidents</h1>
             </header>
-            <p class="description open-sans">Displaying additional information</p>
+            <p class="description open-sans">Viewport summaries</p>
             <br/>
             <div id="widgets" class="open-sans">
                 <div>
