--- a/examples/basemap/pitch-bearing.html
+++ b/examples/basemap/pitch-bearing.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-  
 <head>
-  <title>Legend unclassed | CARTO</title>
+  <title>Set pitch and bearing | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
@@ -10,18 +9,15 @@
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
-
 <body>
   <div id="map"></div>
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Latitudes</h1>
+        <h1>Pitch and Bearing</h1>
       </header>
       <section>
-        <div id="controls">
-          <ul id="content"></ul>
-        </div>
+        <p class="description open-sans">Set pitch and bearing for basemap</p>
       </section>
       <footer class="js-footer"></footer>
     </div>
@@ -33,17 +29,21 @@
       </svg>
     </div>
   </div>
-
   <script>
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [0, 43],
-      zoom: 1
+      center: [2.187984, 41.384065],
+      zoom: 14,
+      scrollZoom: false,
+      //set pitch and bearing
+      pitch: 60, //map.getPitch() in degrees
+      bearing: -47, // map.getBearing() in degrees
     });
 
+    //enable compass
     const nav = new mapboxgl.NavigationControl({
-      showCompass: false
+      showCompass: true
     });
     map.addControl(nav, 'top-left');
 
@@ -52,42 +52,22 @@
       apiKey: 'default_public'
     });
 
-    const source = new carto.source.Dataset('populated_places');
+    const source = new carto.source.Dataset('spend_data');
+  
     const viz = new carto.Viz(`
-      color: ramp(linear($latitude), sunset)
-      width: 5
+      width: 3
+      color: ramp(top($category,5),vivid)
       strokeWidth: 0
     `);
+
     const layer = new carto.Layer('layer', source, viz);
 
-    layer.addTo(map, 'watername_ocean');
-    layer.on('loaded', () => {
-      hideLoader();
-
-      const colorLegend = layer.viz.color.getLegendData();
-      let colorLegendList = '';
-      // Get the information for legend
-      const entries = colorLegend.data;
-      entries.reverse();
-      entries.forEach((legend, index) => {
-        const colorHex = rgbToHex(legend.value);
-        const entry = legend.key.toFixed(2);
-        colorLegendList +=
-          `<li><span class="point-mark" style="background-color:${colorHex};"></span> <span>${entry}</span></li>\n`;
-      });
-
-      // Update the legend with the legend information
-      document.getElementById('content').innerHTML = colorLegendList;
-    });
+    layer.addTo(map,'watername_ocean');
+    layer.on('loaded', hideLoader);
 
     function hideLoader() {
       document.getElementById('loader').style.opacity = '0';
     }
-
-    function rgbToHex(color) {
-      return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
-    }
   </script>
 </body>
-
 </html>
