basemap examples and small adjustments

--- a/examples/basemap/color-map-background.html
+++ b/examples/basemap/color-map-background.html
@@ -14,7 +14,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Remove basemap</h1>
+        <h1>Color background</h1>
       </header>
       <section>
         <p class="description open-sans">Set custom color for map background</p>
