--- a/examples/basemap/pitch-bearing.html
+++ b/examples/basemap/pitch-bearing.html
@@ -14,7 +14,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Pitch and Bearing</h1>
+        <h1>Pitch and bearing</h1>
       </header>
       <section>
         <p class="description open-sans">Set pitch and bearing for basemap</p>
