--- a/examples/guides/add-legends/step-6.html
+++ b/examples/guides/add-legends/step-6.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Transparent Legend | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,9 +17,9 @@
 <body>
     <div id="map"></div>
     <aside class="toolbox">
-        <div class="box" id= "dark">
+        <div class="box" id="dark">
             <header>
-                <h1 id = "light">Rail Accidents by Weather</h1>
+                <h1 id="light">Rail Accidents by Weather</h1>
             </header>
             <!-- Add legend data -->
             <section id="light">
@@ -54,23 +55,24 @@
         `);
         const layer = new carto.Layer('layer', source, viz);
         layer.addTo(map);
-        
+
         //** ADD LEGEND **//
 
         // When layer loads, trigger legend event
         layer.on('loaded', () => {
 
-            // Request data for legend from the layer viz variable myRamp
+            // Request data for legend from the layer viz variables 'myRamp' and 'myOpacity'
             const colorLegend = layer.viz.variables.myRamp.getLegendData();
+            const opacity = layer.viz.variables.myOpacity.value;
+
             let colorLegendList = '';
 
             // Create list elements for legend
             colorLegend.data.forEach((legend, index) => {
                 const color = legend.value;
 
-                //Define and use alpha constant to read RGBA colors
-                const alpha = 0.5;
-                const rgba = `rgba(${color.r}, ${color.g}, ${color.b}, ${alpha})`;
+                // Add the predefined opacity to the ramp color components
+                const rgba = `rgba(${color.r}, ${color.g}, ${color.b}, ${opacity})`;
 
                 // Style for legend items based on geometry type
                 colorLegendList +=
@@ -80,8 +82,9 @@
             // Place list items in the content section of the title/legend box
             document.getElementById('content').innerHTML = colorLegendList;
         });
-       
+
     </script>
 
 </body>
+
 </html>
