--- a/examples/widgets/histogram-widget-viewport.html
+++ b/examples/widgets/histogram-widget-viewport.html
@@ -8,7 +8,7 @@
     <script src="../../../dist/carto-vl.js"></script>
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 
     <!-- Include Airship -->
     <link rel="stylesheet" href="https://libs.cartocdn.com/airship-style/v1.0.3/airship.css">
