--- a/examples/widgets/numeric-chart.html
+++ b/examples/widgets/numeric-chart.html
@@ -8,7 +8,7 @@
   <script src="../../../dist/carto-vl.js"></script>
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="../../style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 
   <!-- Include Chart JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
@@ -96,7 +96,7 @@
           ticks: {
             callback: function (tick, index, ticks) {
               if (!Number.isNaN(tick[0])) {
-                return `[${tick[0]}, ${tick[1]}]`;
+                return `${tick[0]}-${tick[1]}h`;
               }
             },
             autoSkip: false,
