--- a/examples/widgets/viewport-summary.html
+++ b/examples/widgets/viewport-summary.html
@@ -8,7 +8,7 @@
     <script src="../../../dist/carto-vl.js"></script>
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <h1>Railroad accidents</h1>
             </header>
             <p class="description open-sans">Viewport summaries</p>
-            <br/>
+            <br />
             <div id="widgets" class="open-sans">
                 <div>
                     <label>Viewport accidents:</label>
