--- a/examples/labeling/polygon-labels.html
+++ b/examples/labeling/polygon-labels.html
@@ -19,6 +19,7 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-122.406855, 37.744263],
+      zoom: 12,
       scrollZoom: false,
     });
 
