--- a/examples/labeling/point-labels.html
+++ b/examples/labeling/point-labels.html
@@ -85,13 +85,13 @@
             "text-font": ["Open Sans Bold", "Arial Unicode MS Bold"],
             "text-size": 10,
             "text-offset": [0,0.65],
-            "text-anchor": 'top',
+            "text-anchor": "top",
             "text-max-width": 8,
-            "text-justify": 'center'
+            "text-justify": "center"
           },
         "paint": {
-          "text-color": 'white',
-          "text-halo-color": 'fuchsia',
+          "text-color": '"white",
+          "text-halo-color": "fuchsia",
           "text-halo-width": 0.5,
           "text-halo-blur": 0.5
         }
