--- a/examples/labeling/point-labels.html
+++ b/examples/labeling/point-labels.html
@@ -90,7 +90,7 @@
             "text-justify": "center"
           },
         "paint": {
-          "text-color": '"white",
+          "text-color": "white",
           "text-halo-color": "fuchsia",
           "text-halo-width": 0.5,
           "text-halo-blur": 0.5
