text size stops by zoom

--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -72,7 +72,7 @@
 
       layer.on('updated', layerUpdated);
 
-      // Style labels
+      // Style labels add stops to paint properties for conditional label styles
       map.addLayer({
         "id": "my-labels",
         "type": "symbol",
