--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Point labels with conditional style | CARTO</title>
+  <title>Point labels conditional style | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../dist/carto-vl.js"></script>
