--- a/examples/labeling/point-labels-size-zoom.html
+++ b/examples/labeling/point-labels-size-zoom.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Point labels | CARTO</title>
+    <title>Point labels text size by zoom | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <script src="../../dist/carto-vl.js"></script>
