--- a/examples/labeling/point-labels.html
+++ b/examples/labeling/point-labels.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Point labels | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,27 +15,26 @@
   <div id="map"></div>
 
   <script>
-      const map = new mapboxgl.Map({
-        container: 'map',
-        style: carto.basemaps.darkmatter,
-        center: [-104.994105, 39.745939],
-        zoom: 14,
-        scrollZoom: false,
-      });
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: carto.basemaps.darkmatter,
+      center: [-104.994105, 39.745939],
+      zoom: 14
+    });
 
-      const nav = new mapboxgl.NavigationControl({
-        showCompass: false
-      });
-      map.addControl(nav, 'top-left');
-  
-      carto.setDefaultAuth({
-        user: 'cartovl',
-        apiKey: 'default_public'
-      });
-  
-      // Point layer
-      const source = new carto.source.Dataset('points_of_interest');
-      const viz = new carto.Viz(`
+    const nav = new mapboxgl.NavigationControl({
+      showCompass: false
+    });
+    map.addControl(nav, 'top-left');
+
+    carto.setDefaultAuth({
+      user: 'cartovl',
+      apiKey: 'default_public'
+    });
+
+    // Point layer
+    const source = new carto.source.Dataset('points_of_interest');
+    const viz = new carto.Viz(`
         color: fuchsia
         width: 6
         strokeColor: white
@@ -42,50 +42,50 @@
         filter: $major == "YES"
         @v_features: viewportFeatures($poi_name)
       `);
-      const layer = new carto.Layer('points', source, viz);
-      
-      // Create labeling layer centroids
-      layer.on('loaded', () => {
-        map.addSource('labels', { type: 'geojson', data: null });
-        const labelSource = map.getSource('labels');
-  
-        const layerUpdated = function () {
-          const features = viz.variables.v_features.value;
-          const geojsonFeatures = features.map(f => {
-            return {
-              "type": "Feature",
-              "geometry": {
-                "type": "Point",
-                "coordinates": f.getCentroid()
-              },
-              "properties": {
-                "label_field": `${f.properties['poi_name']}`,
-              }
+    const layer = new carto.Layer('points', source, viz);
+
+    // Create labeling layer centroids
+    layer.on('loaded', () => {
+      map.addSource('labels', { type: 'geojson', data: null });
+      const labelSource = map.getSource('labels');
+
+      const layerUpdated = function () {
+        const features = viz.variables.v_features.value;
+        const geojsonFeatures = features.map(f => {
+          return {
+            "type": "Feature",
+            "geometry": {
+              "type": "Point",
+              "coordinates": f.getCentroid()
+            },
+            "properties": {
+              "label_field": `${f.properties['poi_name']}`,
             }
-          });
-  
-          labelSource.setData({
-            type: 'FeatureCollection',
-            features: geojsonFeatures
-          });
-        };
-  
-        layer.on('updated', layerUpdated);
-  
-        // Style labels
-        map.addLayer({
-          "id": "my-labels",
-          "type": "symbol",
-          "source": "labels",
-          "layout": {
-            "text-field": "{label_field}",
-            "text-font": ["Open Sans Bold", "Arial Unicode MS Bold"],
-            "text-size": 10,
-            "text-offset": [0,0.65],
-            "text-anchor": "top",
-            "text-max-width": 8,
-            "text-justify": "center"
-          },
+          }
+        });
+
+        labelSource.setData({
+          type: 'FeatureCollection',
+          features: geojsonFeatures
+        });
+      };
+
+      layer.on('updated', layerUpdated);
+
+      // Style labels
+      map.addLayer({
+        "id": "my-labels",
+        "type": "symbol",
+        "source": "labels",
+        "layout": {
+          "text-field": "{label_field}",
+          "text-font": ["Open Sans Bold", "Arial Unicode MS Bold"],
+          "text-size": 10,
+          "text-offset": [0, 0.65],
+          "text-anchor": "top",
+          "text-max-width": 8,
+          "text-justify": "center"
+        },
         "paint": {
           "text-color": "white",
           "text-halo-color": "fuchsia",
@@ -94,9 +94,10 @@
         }
       });
     });
-      
-      layer.addTo(map);
-  
-    </script>
+
+    layer.addTo(map);
+
+  </script>
 </body>
+
 </html>
