--- a/debug/interactive-based-styling.html
+++ b/debug/interactive-based-styling.html
@@ -100,7 +100,7 @@
         }, delay);
 
         map.flyTo({
-          center: feature.getCentroid()
+          center: feature.getRenderedCentroid()
         });
       }
     });
