--- a/debug/labels-points-size-zoom.html
+++ b/debug/labels-points-size-zoom.html
@@ -70,7 +70,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCentroid()
+              "coordinates": f.getRenderedCentroid()
             },
             "properties": {
               "label_field": `${f.properties['country_code']}`,
