--- a/debug/centroids.html
+++ b/debug/centroids.html
@@ -99,7 +99,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCentroid()
+              "coordinates": f.getRenderedCentroid()
             },
             "properties": {
               "field": field
