--- a/debug/labels-lines-1.html
+++ b/debug/labels-lines-1.html
@@ -56,7 +56,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCentroid()
+              "coordinates": f.getRenderedCentroid()
             },
             "properties": {
               "label_field": `${f.properties['class']}`,
