--- a/debug/labels-points.html
+++ b/debug/labels-points.html
@@ -59,7 +59,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCentroid()
+              "coordinates": f.getRenderedCentroid()
             },
             "properties": {
               "label_field": `${f.properties['pop_max']}`,
