--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -55,7 +55,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCentroid()
+              "coordinates": f.getRenderedCentroid()
             },
             "properties": {
               "label_field": `${f.properties['poi_name']}`,
