Small update just to test CircleCI configuration changes

--- a/test/browsers/basic-test.html
+++ b/test/browsers/basic-test.html
@@ -16,7 +16,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Basic browser support</h1>
+        <h1>Basic browser support test</h1>
       </header>
       <br />
       <section>
